changed jobs@trustlayers.com to info@...

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <br>
       <br>
       <div style="text-align: center;">
-        For more information, reach us <a href="mailto:jobs@trustlayers.com">here</a>
+        For more information, reach us <a href="mailto:info@trustlayers.com">here</a>
 
        <br>
        <br>
